--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,43 @@
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
+/* common styles or utilities*/
 body{
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
+    background-color: #F3F1FF;
+}
+.container{
+    background-color: #fff;
+    width: 870px;
+    padding: 30px;
+}
+main{
+    display: flex;
+    justify-content: center;
+}
+/* top players style */
+.section-title{
+    color:#562EFF;
+    font-size: 24px;
+    line-height: 36px;
+}
+.top-players{
+}
+.players{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 29px;
+}
+.player{
+    display: flex;
+    align-items: center;
+}
+.player img{
+    width: 56px;
+    height: 56px;
+}
+.player-name{
+    margin-left: 16px;
 }
