--- a/styles/style.css
+++ b/styles/style.css
@@ -12,25 +12,73 @@ body{
     background-color: #fff;
     width: 870px;
     padding: 30px;
+    margin-bottom:19px;
+    border-radius: 5px;
 }
 main{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
 }
+
+/* Header styles */
+.header-area{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #562EFF;
+    padding:36px 0px;
+}
+.logo-area{
+    display: flex;
+    align-items: center;
+    column-gap: 15px;
+}
+.logo-img img{
+    width: 40.42px;
+    height: 51px;
+}
+.logo-text h3{
+    font-size: 24px;
+    color:#fff;
+}
+.main-menu nav ul{
+    display: flex;
+    align-items: center;
+    margin:0px;
+    padding: 0px;
+}
+.main-menu nav ul li{
+    list-style: none;
+}
+.main-menu nav ul li a{
+    text-decoration: none;
+    color: #fff;
+    padding: 0px 36px;
+}
+}
+
 /* top players style */
 .section-title{
     color:#562EFF;
     font-size: 24px;
     line-height: 36px;
+    margin-top: 3px;
+}
+hr{
+    border:1px solid #D1D1D1;
+    margin-bottom: 27px;
 }
 .top-players{
+    margin-bottom:21px;
 }
 .players{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-row-gap: 29px;
 }
-.player{
+.player,.blog{
     display: flex;
     align-items: center;
 }
@@ -40,4 +88,66 @@ main{
 }
 .player-name{
     margin-left: 16px;
+}
+
+/* Top blogs styles */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap:26px;
+}
+.blog .thumbnail img{
+    width: 177px;
+    height: 117px;
+}
+.blog-info{
+    margin-left: 16px;
+}
+.blog-title{
+    font-size: 20px;
+}
+.blog-author{
+    font-size: 16px;
+}
+.blog-author a{
+    color:#562EFF;
+    text-decoration: none;
+}
+
+/* Latest courses */
+.courses{
+    display: flex;
+    grid-column-gap: 23px;
+}
+.course-info{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.course-banner img{
+    width: 224px;
+    height: 104px;
+}
+i.fas.fa-star{
+    font-size: 12px;
+}
+i.fas.fa-star.filled {
+    color: #FFC014;
+}
+i.fas.fa-star.empty{
+    color:#AEAEAE;
+}
+h3.course-title {
+    font-size: 20.03px;
+}
+.course {
+    box-shadow: 5px 10px 15px rgba(0,0,0,0.05);
+    padding:13px;
+    border-radius: 20px;
+}
+.course-duration {
+    color: #FF4A60;
+    background-color: #FFE4E8;
+    padding: 5px 10px;
+    border-radius: 20px;
 }
